--- a/WIPO/index.html
+++ b/WIPO/index.html
@@ -33,14 +33,14 @@
 
 <div class="videos" id="home">
     <div class="videos-wrapper">
-        <iframe width="100%" height="615" src="https://www.youtube.com/embed/UJ-srdYmWlQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe class="first-video" width="100%" height="615" src="https://www.youtube.com/embed/UJ-srdYmWlQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
     </div>
 
 <!-- VIDEO END -->
 
 <!-- TEXT START -->
-<h2 align="center">„Was jeder wissen sollte – wie unser Pensionssystem funktioniert“</h2>
+<h2 align="center" class="first-title">„Was jeder wissen sollte – wie unser Pensionssystem funktioniert“</h2>
 <div class="about-wrap">
     <p class="text-title" align="center">Wie funktioniert unser Pensionssystem eigentlich?</p>
     <p class="text-main">Die Pension ist etwas, was uns alle betrifft, doch wie gut kennen wir uns wirklich mit dieser Thematik aus? Für die meisten Menschen hat das Wort “Pension“ an sich schon eine abweisende Wirkung: die einen denken, dass sie keine mehr erhalten werden, andere haben Angst davor, dass sie viel zu viel beisteuern müssen und eine dritte Gruppe/wieder andere möchten sich mit dem Thema gar nicht erst beschäftigen, da es “eh noch lange genug dauert“ bis sie ihre Pension antreten. Genau diese Einstellung zu diesem Thema wollen wir ändern, indem wir euch die zugrunde liegenden Mechanismen einfach und verständlich erklären, damit auch ihr genau wisst worum es geht und wie es funktioniert. Und eigentlich ist es auch nicht so kompliziert, wie man vielleicht denkt. Zum Einstieg in das Thema hier erst einmal ein kurzes Einführungsvideo. Das österreichische Pensionssystem ist für viele Menschen ein Mysterium, überall gibt es verschiedene Informationen zu diesem Thema, wodurch man den Überblick verliert. Genau dieses Problem behandeln wir auf dieser Seite, wir möchten einen Einblick in das österreichische Pensionssystem liefern, die zugrunde liegenden Mechanismen näher erläutern und auch verständlich erklären, damit jeder versteht, wie das Pensionssystem funktioniert. Und eigentlich ist es auch nicht so kompliziert, wie man vielleicht denkt.</p>
