Last commmit adaptiert

--- a/WIPO/index.html
+++ b/WIPO/index.html
@@ -19,11 +19,11 @@
         <a href="#home" class="header-link js-scroll">Home</a>
         <a href="#pensi" class="header-link js-scroll">Pensionssystem in Österreich</a>
         <a href="#umla" class="header-link js-scroll">Umlageverfahren</a>
-        <a href="#kap" >Kapitaldeckungsverfahren</a>
-        <a href="#timeline" >Timeline</a>
-        <a href="#aboutus" >Links</a>
-        <a href="#aboutus">Über Uns </a>
-        <a href="#aboutus" >Quellen</a>
+        <a href="#kap" class="header-link js-scroll">Kapitaldeckungsverfahren</a>
+        <a href="#timeline" class="header-link js-scroll">Timeline</a>
+        <a href="#aboutus" class="header-link js-scroll">Links</a>
+        <a href="#aboutus" class="header-link js-scroll">Über Uns </a>
+        <a href="#aboutus" class="header-link js-scroll">Quellen</a>
     </div>
 </div>
 
@@ -186,7 +186,7 @@
     <p class="text-title" align="center">Umlageverfahren</p>
     <p class="text-main">Wie bereits erwähnt besteht unser Pensionssystem aus dem Umlageverfahren. Was bedeutet das jetzt? Man kann es ganz einfach erklären, die jüngere Generation finanziert die ältere Generation. So einfach! Also nun ein bisschen genauer. Dem arbeitenden Volk wird monatlich ein bestimmter Betrag vom Bruttolohn abgezogen. Dieser wird dann gesammelt an die Pensionisten aufgeteilt.</p>
     <p align="center" class="umlag-tit">Welche Vorteile bringt dieses System mit sich:</p>
-    <p class="text-main"><img src="./img/svg/retirement.svg" alt="pension" width="40px" height="40px"> Man muss nicht selber für seine Pension sparen, wie es beim Kapitaldeckungsverfahren der Fall ist (siehe nächste ….), sondern es wird vom.</p>
+    <p class="text-main"><img src="./img/svg/retirement.svg" alt="pension" width="40px" height="40px"> Man muss nicht selber für seine Pension sparen, wie es beim Kapitaldeckungsverfahren der Fall ist (siehe nächste ….), sondern es wird vom Bruttolohn automatisch abgezogen und auf die Pensionisten aufgeteilt</p>
     <p class="text-main"><img src="./img/svg/retirement.svg" alt="pension" width="40px" height="40px"> Ein weiterer Vorteil ist, dass der Staat einen Zuschuss gewährt, wenn man nicht die Mindestpension erreicht.</p>
     <p align="center" class="umlag-tit">Zu den Nachteilen:</p>
     <p class="text-main"><img src="./img/svg/retirement.svg" alt="pension" width="40px" height="40px"> Ein wichtiger Punkt ist, dass es keine Gerechtigkeit zwischen den Generationen gibt. Die Pensionisten heute bekommen eine deutlich höhere Pension, als wir es mit 70 Jahren bekommen werden. Der Grund dafür ist die demografische Veränderung (dazu mehr unter dem Punkt demografische Veränderungen).</p>
@@ -199,7 +199,7 @@
 
 <h2 align="center" class="umlag-title" id="kap">Kapitaldeckungsverfahren</h2>
 <div class="about-wrap-kap">
-    <p class="text-title" align="center">Umlageverfahren</p>
+    <p class="text-title" align="center">Kapitaldeckungsverfahren</p>
     <p class="text-main">„Spare in der Zeit, dann hast du in der Not.“ Dieses altbekannte Sprichwort beschreibt das Kapitaldeckungsverfahren, oder auch Anwartschaftsverfahren/Deckungsverfahren, sehr gut.     Für die Altersvorsorge bedeutet das: Wer heute genug anspart, kann morgen davon profitieren</p>
     <p class="text-main-kap">So funktioniert das Verfahren:</p>
     <p class="text-main">Die zukünftigen Pensionsleistungen werden bereits heute planmäßig vorfinanziert. Jeder kann somit eine eigene Pensionsversicherung abschließen, bei welcher regelmäßig bestimmte Beträge eingezahlt werden. Diese Einzelbeträge werden von der Privatversicherung im Idealfall rentabel angelegt, summieren sich im Laufe der Zeit auf und ergeben schlussendlich die Deckungssumme. Ab Pensionseintritt kann diese dann entweder als Ganzes oder in Teilbeträgen als „Zusatzpension“ ausbezahlt werden.</p>
