--- a/WIPO/index.html
+++ b/WIPO/index.html
@@ -14,16 +14,15 @@
 <!-- HEADER START -->
 
 <div class="nav">
-    <img src="./img/svg/wuwienlogo.svg" alt="wu" width="170px" height="90px">
     <div class="nav-links">
         <a href="#home" class="header-link js-scroll">Home</a>
         <a href="#pensi" class="header-link js-scroll">Pensionssystem in Österreich</a>
-        <a href="#umla" class="header-link js-scroll">Umlageverfahren</a>
-        <a href="#kap" class="header-link js-scroll">Kapitaldeckungsverfahren</a>
         <a href="#timeline" class="header-link js-scroll">Timeline</a>
-        <a href="#aboutus" class="header-link js-scroll">Links</a>
-        <a href="#aboutus" class="header-link js-scroll">Über Uns </a>
+        <a href="#umla" class="header-link js-scroll">Umlageverfahren</a>
+        <a href="#" class="header-link js-scroll">Demografische Herausforderungen</a>
+        <a href="#kap" class="header-link js-scroll">Kapitaldeckungsverfahren</a>
         <a href="#aboutus" class="header-link js-scroll">Quellen</a>
+        <a href="#aboutus" class="header-link js-scroll">Über uns</a>
     </div>
 </div>
 
@@ -43,7 +42,7 @@
 <h2 align="center" class="first-title">„Was jeder wissen sollte – wie unser Pensionssystem funktioniert“</h2>
 <div class="about-wrap">
     <p class="text-title" align="center">Wie funktioniert unser Pensionssystem eigentlich?</p>
-    <p class="text-main">Die Pension ist etwas, was uns alle betrifft, doch wie gut kennen wir uns wirklich mit dieser Thematik aus? Für die meisten Menschen hat das Wort “Pension“ an sich schon eine abweisende Wirkung: die einen denken, dass sie keine mehr erhalten werden, andere haben Angst davor, dass sie viel zu viel beisteuern müssen und eine dritte Gruppe/wieder andere möchten sich mit dem Thema gar nicht erst beschäftigen, da es “eh noch lange genug dauert“ bis sie ihre Pension antreten. Genau diese Einstellung zu diesem Thema wollen wir ändern, indem wir euch die zugrunde liegenden Mechanismen einfach und verständlich erklären, damit auch ihr genau wisst worum es geht und wie es funktioniert. Und eigentlich ist es auch nicht so kompliziert, wie man vielleicht denkt. Zum Einstieg in das Thema hier erst einmal ein kurzes Einführungsvideo. Das österreichische Pensionssystem ist für viele Menschen ein Mysterium, überall gibt es verschiedene Informationen zu diesem Thema, wodurch man den Überblick verliert. Genau dieses Problem behandeln wir auf dieser Seite, wir möchten einen Einblick in das österreichische Pensionssystem liefern, die zugrunde liegenden Mechanismen näher erläutern und auch verständlich erklären, damit jeder versteht, wie das Pensionssystem funktioniert. Und eigentlich ist es auch nicht so kompliziert, wie man vielleicht denkt.</p>
+    <p class="text-main">Die Pension ist etwas, was uns alle betrifft, doch wie gut kennen wir uns wirklich mit dieser Thematik aus? Für die meisten Menschen hat das Wort “Pension“ an sich schon eine abweisende Wirkung: die einen denken, dass sie keine mehr erhalten werden, andere haben Angst davor, dass sie viel zu viel beisteuern müssen und eine dritte Gruppe/wieder andere möchten sich mit dem Thema gar nicht erst beschäftigen, da es “eh noch lange genug dauert“ bis sie ihre Pension antreten. Genau diese Einstellung zu diesem Thema wollen wir ändern.Vorab sei gesagt, dass es in Österreich neben der Alterspension auch verschiedene andere Pensionsarten gibt. Diese umfassen die Invaliditätspension sowie die Witwen-, Witwer- und Waisenpension, auf die wir hier aber nicht genauer eingehen werden. Unser Fokus liegt vor allem auf der Alterspension und darauf, Euch die zugrunde liegenden Mechanismen einfach und verständlich zu erklären, damit auch Ihr genau wisst worum es geht und wie sie funktioniert. Und eigentlich ist es auch nicht so kompliziert, wie man vielleicht denkt.</p>
 </div>
 
 <div class="quiz">
@@ -110,6 +109,14 @@
         </li>
         <li>
             <div class="content">
+                <h2>Einführung deutsche <br> Reichsversicherungsordnung</h2>
+            </div>
+            <div class="time">
+                <h3>1938</h3>
+            </div>
+        </li>
+        <li>
+            <div class="content">
                 <h2>Anpassung der Reichsgesetze</h2>
             </div>
             <div class="time">
@@ -126,7 +133,7 @@
         </li>
         <li>
             <div class="content">
-                <h2>Erster Volle Gleichstellung Arbeiter & Angestellte</h2>
+                <h2>Erste Volle Gleichstellung Arbeiter & Angestellte</h2>
             </div>
             <div class="time">
                 <h3>1958</h3>
@@ -138,14 +145,6 @@
             </div>
             <div class="time">
                 <h3>1997</h3>
-            </div>
-        </li>
-        <li>
-            <div class="content">
-                <h2>Anpassung der Reichsgesetze</h2>
-            </div>
-            <div class="time">
-                <h3>1951</h3>
             </div>
         </li>
         <li>
@@ -175,7 +174,21 @@
         <div style="clear: both;"></div>
     </ul>
 </div>
-
+<h2 align="center" class="umlag-title" id="umla">Geschichte der österreichischen PV</h2>
+<div class="about-wrap-umlag">
+    <p class="text-title" align="center">Geschichte der österreichischen PV</p>
+    <p class="text-main-history prokrutka">Die Geschichte der gesetzlichen Altersvorsorge ist lang und sehr durchwachsen, sie im Detail wiederzugeben würde eine umfangreiche historisch-juristische Betrachtung voraussetzen. Aus diesem Grund bemühe ich mich, mich in den folgenden Absätzen auf die wichtigsten Meilensteine und Zeitabschnitte der österreichischen Pensionsversicherung zu konzentrieren.
+        Eine festgelegte, verpflichtende Pensionsversicherung trat in Österreich erstmals 1906 auf, damals sogar schon mit Kapitaldeckungsverfahren. Die damalige Pension hatte noch keine festgelegtes Antrittsalter, sondern berechnete sich nach Beitragsmonaten (480 Monate). Interessanterweise war im damaligen System schon die Alternative möglich, sich bei einer privaten Versicherungsanstalt selbst zu versichern und somit die Versicherungspflicht zu erfüllen. Diese Versicherung war aber nur für den Berufsstand der, nach heutigem Begriff, Angestellten möglich. Eine Gleichstellung der Arbeiter war noch lange nicht in Sicht. Die Zeit nach dem ersten Weltkrieg war von starker Inflation und marktwirtschaftlichen Unsicherheiten geprägt. Die starke Schwankung des Zinssatzes hatte zur Folge das das Kapitaldeckungsverfahren zugunsten eines Aufwandsdeckungssystems (Umlageverfahren) aufgegeben wurde. Während dieser Entwicklungsphase war die Voraussetzung für den Erhalt einer Pension die Invalidität (Berufsunfähigkeit) und nicht das Alter. Ab 1927 wurde auch erstmals eine Altersgrenze eingeführt ab der Angestellte, die Anspruch auf ihre Pension erhoben, nicht mehr einen Nachweis für Berufsunfähigkeit nachweisen mussten. Das Pensionsantrittsalter war damals – wie auch heute – 60 Jahre für Frauen und 65 für Männer.
+        1935 wurde während in der Zeit des Ständestaates das Gewerbliche Sozialversicherungsgesetz (GSVG) eingeführt. Dieses regelt damals zusätzlich zu den selbstständig Erwerbstätigen auch unselbstständige mit Ausnahme der Landwirtschaft, Eisenbahner und Notare.
+        Während des zweiten Weltkriegs wurde in Österreich, infolge des Anschlusses, das deutsche Sozialversicherungssystem übernommen. Die deutsche Reichsversicherungsordnung (RVO) bot nun auch eine Pensionsversicherung für Arbeiter. Diese stellte das Pensionsantrittsalter für Männer und Frauen gleich. Da es sich immer noch um eine Invalidenrente handelte war ein Anspruchsgrund entweder die dauernde Berufsunfähigkeit, die ab dem vollendeten 65. Lebensjahr nicht mehr begründet werden musste. Der Rahmen für Angestellt wurde im Zuge der deutschen Richtlinien (im RAVG) weiter ausgestaltet. Für sie wurde erstmals durch die Beschränkung des Vergleichsverdienstes auf „Versicherte mit ähnlicher Ausbildung und gleichwertigen Kenntnissen und Fähigkeiten“, ein Berufsschutz eingeführt.
+        Nach dem Krieg war die österreichische Politik bemüht die Renten and das Niveau der Löhne anzugleichen, da Altrentner von der besonders starken Nachkriegsinflation betroffen waren. Das Ziel, vor allem weibliche Versicherte und Witwen vor Altersarmut zu schützen, sollte durch eine Senkung des Pensionsantrittsalters von Frauen auf 60 Jahre, erreicht werden. Die neuen gesetzlichen Bestimmungen schufen um die weiterhin geltenden Vorschriften des deutschen Reichsgesetzes einen allgemeinen gesetzlichen Rahmen. Neue Bestimmungen, die die Mindestbeiträge zwischen Invaliditäts- und Alterspension unterschieden führten dazu das diese aufhörte eine begünstigte Invalidenrente zu sein.
+        1956 fasste das ASVG erstmals alle Sozialversicherungssparten für Arbeiter und Angestellte zusammen. Es bedeutete auch das Ende der reichsrechtlichen Pensionsversicherung in Österreich. Der Wirtschaftsaufschwung beginnend in den späten 1950er Jahren führte zu stätig wachsenden Beschäftigtenzahlen, die läutete auch das „Goldene Zeitalter“ der Pensionsversicherung ein. Die vorzeitige Alterspension bei Arbeitslosigkeit wurde 1958 auch für Arbeiter möglich. Dadurch wurden diese endgültig den Angestellten gleichgestellt.
+        Es stellte sich in dieser Zeit aber auch das Problem einer Vielzahl an Rentenbeziehern aus verschiedenen Versicherungssystemen, manche noch aus der Zeit nach dem 1. Weltkrieg. Dieses Problem wurde durch eine Anhebung auf das Lohnniveau des Jahres 1959 unter, für die Zeit, enormen Kosten bewältigt – allein für Arbeiter 1,2 Mrd. Schilling. In dieser Reform wurde auch die 14. Rente eingeführt.
+        Die Ölpreisschocks der 70er und 80er läuteten das ende des goldenen Zeitalters ein. Diesem folgte eine intensive Reformzeit der österreichischen Pensionsversicherung, bei der kaum ein Stein auf dem anderen blieb.
+        1997 wurde für die Bundesregierung ein Gutachten erstellt, in dem die Beziehung der sich verändernden Bevölkerungspyramide in der ersten Hälfte des 21. Jahrhunderts und den Finanzierungsproblemen des Pensionsversicherung hergestellt wurde.
+        2004 wurde das Pensionssystem wieder von der Lohnentwicklung getrennt und die Pensionshöhe an die Inflation angepasst. In diesem Jahr wird auch erstmals das Pensionskonto als neue Bemessungsgrundlage eingeführt und das Anwachsen des Pensionsanspruches mit wachsender Versicherungsdauer sichtbar macht.
+        In den 2000 Jahren wurden auch vorherige Pensionsstrukturen abgeschafft. Beispiele dafür sind sowohl die Abschaffung der Alterspension bei Arbeitslosigkeit, sowie auch die Gleitpension (stückweises Anheben der Pensionszahlungen bei Frühpension). Als wohl bekannteste Interimslösung dieser Zeit gilt die „Hacklerpension“, diese war für Langzeitversicherte bei besonders langer Versicherungsdauer für eine Übergangszeit bis 2019 vorgesehen. Der Höchstbetrag konnte als Resultat aus den Pensionsreformen auch erst nach 45-jähriger Versicherungszeit erreicht werden.
+        2014 wurde von der Pensionskommission ein neues Langzeitgutachten erstellt, welches weiter die demografisch bedingten Entwicklungen und daraus resultierenden unerbittlichen Forderungen and das Pensionssystem verdeutlicht.</p>
 <!-- TIMELINE END -->
 
 <!-- UMLAGEVERFAHREN START -->
@@ -184,18 +197,46 @@
 <div class="about-wrap-umlag">
     <iframe width="1060px" height="600px" src="https://www.youtube.com/embed/fM6S9tjCnuU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <p class="text-title" align="center">Umlageverfahren</p>
-    <p class="text-main">Wie bereits erwähnt besteht unser Pensionssystem aus dem Umlageverfahren. Was bedeutet das jetzt? Man kann es ganz einfach erklären, die jüngere Generation finanziert die ältere Generation. So einfach! Also nun ein bisschen genauer. Dem arbeitenden Volk wird monatlich ein bestimmter Betrag vom Bruttolohn abgezogen. Dieser wird dann gesammelt an die Pensionisten aufgeteilt.</p>
+    <p class="text-main">Wie bereits erwähnt besteht unser Pensionssystem aus dem Umlageverfahren. Was bedeutet das? In Österreich wird dies so geregelt, dass monatlich von den Erwerbstätigen ein bestimmter Anteil vom Bruttolohn/Bruttogehalt abgezogen wird. Dieser Betrag wird
+        dann gesammelt in ein Konto einbezahlt und von dort auf die Pensionisten aufgeteilt. Daher
+        wir es auch Umlaufverfahren genannt, weil es von einem zum anderen kommt und immer in
+        Bewegung/ im Umlauf ist. Anders ist es beim Kapitaldeckungsverfahren hier steht es still, bis
+        es in der Pension ausbezahlt wird. Aber dazu später mehr. </p>
     <p align="center" class="umlag-tit">Welche Vorteile bringt dieses System mit sich:</p>
-    <p class="text-main"><img src="./img/svg/retirement.svg" alt="pension" width="40px" height="40px"> Man muss nicht selber für seine Pension sparen, wie es beim Kapitaldeckungsverfahren der Fall ist (siehe nächste ….), sondern es wird vom Bruttolohn automatisch abgezogen und auf die Pensionisten aufgeteilt</p>
-    <p class="text-main"><img src="./img/svg/retirement.svg" alt="pension" width="40px" height="40px"> Ein weiterer Vorteil ist, dass der Staat einen Zuschuss gewährt, wenn man nicht die Mindestpension erreicht.</p>
+    <p class="text-main"><img src="./img/svg/retirement.svg" alt="pension" width="40px" height="40px"> Man muss nicht selber für seine Pension sparen, wie es beim
+        Kapitaldeckungsverfahren der Fall ist, sondern es wird vom Bruttolohn automatisch
+        abgezogen und auf die Pensionisten aufgeteilt</p>
+    <p class="text-main"><img src="./img/svg/retirement.svg" alt="pension" width="40px" height="40px"> Ein weiterer Vorteil ist, dass der Staat einen Zuschuss gewährt, wenn man nicht die
+        Mindestpension erreicht</p>
     <p align="center" class="umlag-tit">Zu den Nachteilen:</p>
-    <p class="text-main"><img src="./img/svg/retirement.svg" alt="pension" width="40px" height="40px"> Ein wichtiger Punkt ist, dass es keine Gerechtigkeit zwischen den Generationen gibt. Die Pensionisten heute bekommen eine deutlich höhere Pension, als wir es mit 70 Jahren bekommen werden. Der Grund dafür ist die demografische Veränderung (dazu mehr unter dem Punkt demografische Veränderungen).</p>
-    <p class="text-main"><img src="./img/svg/retirement.svg" alt="pension" width="40px" height="40px"> Auch die Arbeitslosigkeit ein weiterer Faktor, der beachtet werden sollte. Wenn viele arbeitslos sind, wird weniger in den Topf für die Pensionisten eingezahlt, und um so mehr muss der Staat beitragen.</p>
+    <p class="text-main"><img src="./img/svg/retirement.svg" alt="pension" width="40px" height="40px"> Ein wichtiger Punkt ist, dass es keine Gerechtigkeit zwischen den Generationen gibt.
+        Die Pensionisten heute bekommen eine deutlich höhere Pension, als wir es mit 70
+        Jahren bekommen werden. Der Grund dafür ist die demografische Veränderung
+        (dazu mehr im gleichnamigen Punkt)</p>
+    <p class="text-main"><img src="./img/svg/retirement.svg" alt="pension" width="40px" height="40px">Auch die Arbeitslosigkeit ist ein weiterer Faktor, der beachtet werden sollte. Wenn
+        viele arbeitslos sind, wird weniger in den Topf für die Pensionisten eingezahlt und der
+        Staat muss mehr beisteuern. </p>
 </div>
 
 <!-- UMLAGEVERFAHREN END -->
 
-<!-- Kapitaldeckungsverfahren START -->
+<!-- Demorgafisch -->
+
+    <h2 align="center" class="umlag-title" id="umla">Demografische Herausforderungen</h2>
+    <div class="about-wrap-demo">
+        <p class="text-main">Warum wird es demografische Herausforderungen geben? In unserem Pensionssystem
+            herrscht das Umlaufverfahren, das wie bereits erläutert von der arbeitenden Bevölkerung an
+            die Pensionisten ausbezahlt wird. Das “Problem” dabei ist, dass immer mehr vor dem
+            vorgegebenen Antrittsalter in Pension gehen. Dies soll allerdings mit strengeren Gesetzen
+            reduziert werden. Für nähere Informationen schauen Sie sich das Einführungsvideo, oder
+            das Video unter diesem Beitrag an.</p>
+        <iframe width="1060px" height="600px" src="https://www.youtube.com/embed/Cel8AA2BTYE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+
+    <!-- Demorgafisch -->
+
+
+    <!-- Kapitaldeckungsverfahren START -->
 
 <h2 align="center" class="umlag-title" id="kap">Kapitaldeckungsverfahren</h2>
 <div class="about-wrap-kap">
