--- a/WIPO/index.html
+++ b/WIPO/index.html
@@ -19,7 +19,7 @@
         <a href="#pensi" class="header-link js-scroll">Pensionssystem in Österreich</a>
         <a href="#timeline" class="header-link js-scroll">Timeline</a>
         <a href="#umla" class="header-link js-scroll">Umlageverfahren</a>
-        <a href="#" class="header-link js-scroll">Demografische Herausforderungen</a>
+        <a href="#demo" class="header-link js-scroll">Demografische Herausforderungen</a>
         <a href="#kap" class="header-link js-scroll">Kapitaldeckungsverfahren</a>
         <a href="#aboutus" class="header-link js-scroll">Quellen</a>
         <a href="#aboutus" class="header-link js-scroll">Über uns</a>
@@ -174,7 +174,7 @@
         <div style="clear: both;"></div>
     </ul>
 </div>
-<h2 align="center" class="umlag-title" id="umla">Geschichte der österreichischen PV</h2>
+<h2 align="center" class="umlag-title">Geschichte der österreichischen PV</h2>
 <div class="about-wrap-umlag">
     <p class="text-title" align="center">Geschichte der österreichischen PV</p>
     <p class="text-main-history prokrutka">Die Geschichte der gesetzlichen Altersvorsorge ist lang und sehr durchwachsen, sie im Detail wiederzugeben würde eine umfangreiche historisch-juristische Betrachtung voraussetzen. Aus diesem Grund bemühe ich mich, mich in den folgenden Absätzen auf die wichtigsten Meilensteine und Zeitabschnitte der österreichischen Pensionsversicherung zu konzentrieren.
@@ -222,12 +222,11 @@
 
 <!-- Demorgafisch -->
 
-    <h2 align="center" class="umlag-title" id="umla">Demografische Herausforderungen</h2>
+    <h2 align="center" class="umlag-title" id="demo">Demografische Herausforderungen</h2>
     <div class="about-wrap-demo">
         <p class="text-main">Warum wird es demografische Herausforderungen geben? In unserem Pensionssystem
             herrscht das Umlaufverfahren, das wie bereits erläutert von der arbeitenden Bevölkerung an
-            die Pensionisten ausbezahlt wird. Das “Problem” dabei ist, dass immer mehr vor dem
-            vorgegebenen Antrittsalter in Pension gehen. Dies soll allerdings mit strengeren Gesetzen
+            die Pensionisten ausbezahlt wird. Das „Problem“ dabei ist, dass es zum einen immer mehr ältere Menschen gibt und zum anderen einige schon vor dem Antrittsalter in Pension gehen. Dies soll allerdings mit strengeren Gesetzen
             reduziert werden. Für nähere Informationen schauen Sie sich das Einführungsvideo, oder
             das Video unter diesem Beitrag an.</p>
         <iframe width="1060px" height="600px" src="https://www.youtube.com/embed/Cel8AA2BTYE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
